Now the clients can disconnect even if the ball hasn't been launched yet, but there's stil a bug that prevents the clients to succesfully disconnect from the server (i still haven't figured out why) but it happens rarely.

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,10 +1,3 @@
-/ClientFrame.class
-/ClientPanel.class
-/ConnectListener.class
-/ListClientPanel.class
-/Main.class
-/ServerFrame.class
-/ThreadClient.class
-/ThreadPassaggioPalla.class
 /Client/
 /Server/
+/OneServerThreeClients.class
